--- a/WebContent/forms/viewDocument.html
+++ b/WebContent/forms/viewDocument.html
@@ -7,7 +7,7 @@
 				<div class="form-group row">
 					<label class="col-sm-2 col-form-label col-form-label-sm" for="view_document_form_name" data-i18n="form.document.name"></label>
 					<div class="col-10">
-						<input class="form-control form-control-sm" id="view_document_form_name" onChange="" readonly="true"/>
+						<input class="form-control form-control-sm" id="view_document_form_name" onChange="_viewDocument.onNameChange()"/>
 					</div>
 				</div>
 				<div class="form-group row">
@@ -18,7 +18,7 @@
 				</div>
 				<div class="form-group row">
 					<div class="col-sm-10">
-						<button onClick="_searchDocument.search()" type="button" class="btn btn-primary btn-sm">
+						<button id="viewDocumentUpdate" onClick="_viewDocument.update()" type="button" class="btn btn-primary btn-sm">
 							<img src='images/93.png' /> <span data-i18n="form.button.validate" />
 						</button>
 					</div>
@@ -26,21 +26,54 @@
 			</div>
 		</fieldset>
 	</form>
-	<textarea style="width:100%" id="view_document_content"></textarea>
+	<textarea style="width:100%" id="view_document_content" onChange="_viewDocument.onContentChange()"></textarea>
 	<script type="text/javascript">
 		var _viewDocument = {
+			_contentChanged : false,
+			onNameChange : function(){
+				$("#viewDocumentUpdate").prop("disabled",false);
+			},
+			onContentChange : function(){
+				this._contentChanged = true;
+				$("#viewDocumentUpdate").prop("disabled",false);
+			},
+			update : function(){
+				var document = global.document.getCurrent();
+				if (document == null) {
+					sendMessage("error","No current document");
+					return;
+				}
+				var data = new Object();
+				data.id = document.id;
+				data.name = $("#view_document_form_name").val();
+				data.type = $("#view_document_form_type").val();
+				if (this._contentChanged){
+					data.content = $("#view_document_content").val();
+				}
+				$.ajax({
+					"url" : "api/document.php",
+					"method" : "POST",
+					"data" : data,
+					"success" : function(data) {
+						sendMessage("success", i18next.t("message.document_success_update"));
+						_viewDocument.refresh();
+					}
+				}).fail(function(jxqr, textStatus, error) {
+					sendMessage("error", i18next.t("message.document_failure_update") + " : " + error);
+				});
+			},
 			refresh : function() {
 				$("#view_document_form_name").val("");
 				$("#view_document_form_type").val("");
+				$("#view_document_content").val("");
+				$("#viewDocumentUpdate").prop("disabled",true);
 				var document = global.document.getCurrent();
-				if (document == null) {
-					$("#view_document_content").text("");
-				} else {
+				if (document != null) {
 					$.ajax({
 						url : "api/document.php?id=" + document.id + "&content=true",
 						dataType : "text",
 						success : function(data) {
-							$("#view_document_content").text(data);
+							$("#view_document_content").val(data);
 						}
 					}).fail(function(jxqr, textStatus, error) {
 						sendMessage("error", i18next.t("message.document_failure_get") + " : " + error);
