--- a/WebContent/forms/viewItem.html
+++ b/WebContent/forms/viewItem.html
@@ -229,7 +229,9 @@
 			    				html += "<td>"+i18next.t("form.item.down")+"</td>";
 			    				html += "<td>"+i18next.t("category."+element.category.name)+"</td>";
 			    				html += "<td><a href='#' onclick='global.item.open({id:\""+element.id+"\"})'>"+element.name+"</a></td>";
-			    				html += "<td><button class='btn btn-danger btn-sm' onClick='global.item.unlink({id : \""+item.id+"\"},{id : \""+element.id+"\"});' title='Unlink \""+element.name+"\" from \""+item.name+"\"'>Unlink</button></td>";
+			    				html += '<td>';
+			    				html += '<button class="btn btn-danger btn-sm" onClick="global.item.unlink({id : \''+item.id+'\'},{id : \''+element.id+'\'});" title="Unlink \''+element.name+'\' from \''+item.name+'\'">'+i18next.t("form.button.unlink")+'</button>';
+			    				html += '</td>';
 			    				html += "</tr>";
 				    			count++;
 				    			if (count > 8){
@@ -255,7 +257,9 @@
 			    				html += "<td>"+i18next.t("form.item.up")+"</td>";
 			    				html += "<td>"+i18next.t("category."+element.category.name)+"</td>";
 				    			html += '<td><a href="#" onclick="global.item.open({id:\''+element.id+'\'})">'+element.name+'</a></td>';
-				    			html += '<td><button class="btn btn-danger btn-sm" onClick="global.item.unlink({id : \''+element.id+'\'},{id : \''+item.id+'\'});" title="Unlink \''+element.name+'\' from \"'+item.name+'\'">Unlink</button></td>';
+				    			html += '<td>';
+				    			html += '	<button class="btn btn-danger btn-sm" onClick="global.item.unlink({id : \''+element.id+'\'},{id : \''+item.id+'\'});" title="Unlink \''+element.name+'\' from \"'+item.name+'\'">'+i18next.t("form.button.unlink")+'</button>';
+				    			html += '</td>';
 				    			html += "</tr>";
 				    			count++;
 				    			if (count > 8){
